--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          name: DerEnderKeks/distribution
-          ref: refs/heads/feat-proxy-namespaces
+          repository: DerEnderKeks/distribution
+          ref: feat-proxy-namespaces
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
